--- a/index.html
+++ b/index.html
@@ -365,7 +365,11 @@
 
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="close-button" data-modal-close></button>
+        <button class="close-button" data-modal-close>
+          <svg class="close-icon" width="18" height="18">
+            <use href="./images/sprite.svg#close-black"></use>
+          </svg>
+        </button>
         <b class="feedback-text">Оставьте свои данные, мы вам перезвоним</b>
         <form class="feedback" action="">
           <div class="form-feild">
